integracion azure, h2 y sonarqueb