@@ -1,6 +1,5 @@
 package pe.edu.university.service.impl;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -10,20 +9,22 @@ import pe.edu.university.exception.ResourceNotFoundException;
 import pe.edu.university.mapper.PagoMapper;
 import pe.edu.university.repository.PagoRepository;
 import pe.edu.university.service.PagoService;
+import pe.edu.university.util.Constantes;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 @Transactional
 public class PagoServiceImpl implements PagoService {
 
-    @Autowired
-    PagoRepository repository;
+    private final PagoRepository repository;
+    private final PagoMapper mapper;
 
     @Autowired
-    PagoMapper mapper;
+    public PagoServiceImpl(PagoRepository repository, PagoMapper mapper) {
+        this.repository = repository;
+        this.mapper = mapper;
+    }
 
     @Override
     public PagoDto create(PagoDto dto) {
@@ -34,7 +35,8 @@ public class PagoServiceImpl implements PagoService {
 
     @Override
     public PagoDto update(Long id, PagoDto dto) {
-        Pago existing = repository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Pago no encontrado: " + id));
+        Pago existing = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(Constantes.PAGO_NO_ENCONTRADO + id));
         // simple field updates (mapper could be more advanced)
         Pago updated = repository.save(existing);
         return mapper.toDto(updated);
@@ -42,17 +44,19 @@ public class PagoServiceImpl implements PagoService {
 
     @Override
     public PagoDto findById(Long id) {
-        return repository.findById(id).map(mapper::toDto).orElseThrow(() -> new ResourceNotFoundException("Pago no encontrado: " + id));
+        return repository.findById(id).map(mapper::toDto)
+                .orElseThrow(() -> new ResourceNotFoundException(Constantes.PAGO_NO_ENCONTRADO + id));
     }
 
     @Override
     public List<PagoDto> findAll() {
-        return repository.findAll().stream().map(mapper::toDto).collect(Collectors.toList());
+        return repository.findAll().stream().map(mapper::toDto).toList();
     }
 
     @Override
     public void delete(Long id) {
-        Pago e = repository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Pago no encontrado: " + id));
+        Pago e = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(Constantes.PAGO_NO_ENCONTRADO + id));
         repository.delete(e);
     }
 }
