@@ -1,6 +1,5 @@
 package pe.edu.university.service.impl;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -10,20 +9,22 @@ import pe.edu.university.exception.ResourceNotFoundException;
 import pe.edu.university.mapper.ProfesorMapper;
 import pe.edu.university.repository.ProfesorRepository;
 import pe.edu.university.service.ProfesorService;
+import pe.edu.university.util.Constantes;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 @Transactional
 public class ProfesorServiceImpl implements ProfesorService {
 
-    @Autowired
-    ProfesorRepository repository;
+    private final ProfesorRepository repository;
+    private final ProfesorMapper mapper;
 
     @Autowired
-    ProfesorMapper mapper;
+    public ProfesorServiceImpl(ProfesorRepository repository, ProfesorMapper mapper) {
+        this.repository = repository;
+        this.mapper = mapper;
+    }
 
     @Override
     public ProfesorDto create(ProfesorDto dto) {
@@ -34,25 +35,36 @@ public class ProfesorServiceImpl implements ProfesorService {
 
     @Override
     public ProfesorDto update(Long id, ProfesorDto dto) {
-        Profesor existing = repository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Profesor no encontrado: " + id));
-        // simple field updates (mapper could be more advanced)
+        Profesor existing = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(Constantes.PROFESOR_NO_ENCONTRADO + id));
+        if (dto.getNombre() != null)
+            existing.setNombre(dto.getNombre());
+        if (dto.getApellido() != null)
+            existing.setApellido(dto.getApellido());
+        if (dto.getDni() != null)
+            existing.setDni(dto.getDni());
+        if (dto.getEmail() != null)
+            existing.setEmail(dto.getEmail());
+
         Profesor updated = repository.save(existing);
         return mapper.toDto(updated);
     }
 
     @Override
     public ProfesorDto findById(Long id) {
-        return repository.findById(id).map(mapper::toDto).orElseThrow(() -> new ResourceNotFoundException("Profesor no encontrado: " + id));
+        return repository.findById(id).map(mapper::toDto)
+                .orElseThrow(() -> new ResourceNotFoundException(Constantes.PROFESOR_NO_ENCONTRADO + id));
     }
 
     @Override
     public List<ProfesorDto> findAll() {
-        return repository.findAll().stream().map(mapper::toDto).collect(Collectors.toList());
+        return repository.findAll().stream().map(mapper::toDto).toList();
     }
 
     @Override
     public void delete(Long id) {
-        Profesor e = repository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Profesor no encontrado: " + id));
+        Profesor e = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(Constantes.PROFESOR_NO_ENCONTRADO + id));
         repository.delete(e);
     }
 }
