@@ -1,6 +1,5 @@
 package pe.edu.university.service.impl;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -10,20 +9,22 @@ import pe.edu.university.exception.ResourceNotFoundException;
 import pe.edu.university.mapper.SeccionMapper;
 import pe.edu.university.repository.SeccionRepository;
 import pe.edu.university.service.SeccionService;
+import pe.edu.university.util.Constantes;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 @Transactional
 public class SeccionServiceImpl implements SeccionService {
 
-    @Autowired
-    SeccionRepository repository;
+    private final SeccionRepository repository;
+    private final SeccionMapper mapper;
 
     @Autowired
-    SeccionMapper mapper;
+    public SeccionServiceImpl(SeccionRepository repository, SeccionMapper mapper) {
+        this.repository = repository;
+        this.mapper = mapper;
+    }
 
     @Override
     public SeccionDto create(SeccionDto dto) {
@@ -34,7 +35,8 @@ public class SeccionServiceImpl implements SeccionService {
 
     @Override
     public SeccionDto update(Long id, SeccionDto dto) {
-        Seccion existing = repository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Seccion no encontrado: " + id));
+        Seccion existing = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(Constantes.SECCION_NO_ENCONTRADO + id));
         // simple field updates (mapper could be more advanced)
         Seccion updated = repository.save(existing);
         return mapper.toDto(updated);
@@ -42,17 +44,19 @@ public class SeccionServiceImpl implements SeccionService {
 
     @Override
     public SeccionDto findById(Long id) {
-        return repository.findById(id).map(mapper::toDto).orElseThrow(() -> new ResourceNotFoundException("Seccion no encontrado: " + id));
+        return repository.findById(id).map(mapper::toDto)
+                .orElseThrow(() -> new ResourceNotFoundException(Constantes.SECCION_NO_ENCONTRADO + id));
     }
 
     @Override
     public List<SeccionDto> findAll() {
-        return repository.findAll().stream().map(mapper::toDto).collect(Collectors.toList());
+        return repository.findAll().stream().map(mapper::toDto).toList();
     }
 
     @Override
     public void delete(Long id) {
-        Seccion e = repository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Seccion no encontrado: " + id));
+        Seccion e = repository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException(Constantes.SECCION_NO_ENCONTRADO + id));
         repository.delete(e);
     }
 }
